# meg_bids_pipeline

./: README.md  license.txt  requirements.txt  setup.cfg
src/meg_bids_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/meg_pipeline/: bids_reader.py  preprocessing.py
