[metadata]
name = meg-bids-pipeline
version = 0.1.0
author = Chi Wang
description = Demo MEG pipeline with BIDS input
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
package_dir =
    =src
packages = find:
install_requires =
    mne
    mne-bids
    numpy

[options.packages.find]
where = src